GNOME Bugzilla – Bug 723542
Fix the undo and redo icons in RTL
Last modified: 2014-02-09 10:53:55 UTC
See the patches.
Created attachment 267970 [details] [review] adjust colors: Fix the undo symbols in RTL
Created attachment 267971 [details] [review] rotate image: Fix the undo symbols in RTL
Created attachment 267972 [details] [review] sharpen: Fix the undo symbols in RTL
Created attachment 267973 [details] [review] toolbox: Fix the undo and the redo symbols in RTL
All patches pushed to master, thank you.