adjust colors: Fix the undo symbols in RTL

https://bugzilla.gnome.org/show_bug.cgi?id=723542